@@ -1,3 +1,10 @@
+Version 22     Live Server Fixes
+
+--Support in admin interface for awarding cabal member compensation points.
+
+
+
+
 Version 22     2015-April-7
 
 --Fixed bug in lingering commit button when dragging a slider and releasing it
